--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "expensify",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Andrew Mead",
+  "author": "Eze Onyekachukwu",
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test":"jest --watch"
+    "test": "jest --watch"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -19,6 +21,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "express": "^4.15.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^20.0.4",
     "live-server": "^1.2.0",
     "moment": "^2.18.1",
