setup up production server and build

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ node_modules/
 src/playground/
 src/routers/PortfolioRouter.js
 _checkthis.scss
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
