--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --watch",
+    "test": "cross-env NODE_ENV=test jest --watch",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -25,14 +25,18 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "cross-env": "^5.0.5",
     "css-loader": "0.28.4",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
+    "firebase": "^4.2.0",
     "jest": "^20.0.4",
     "live-server": "^1.2.0",
     "moment": "^2.18.1",
     "node-sass": "^6.0.1",
     "normalize.css": "7.0.0",
+    "numeral": "^2.0.6",
     "react": "15.6.1",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.7.0",
@@ -41,6 +45,8 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.2.3",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "^3.1.0",
