--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev-server": "webpack-dev-server",
     "test": "cross-env NODE_ENV=test jest --watch",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run build:prod"
+    "heroku-postbuild": "npm run build:prod",
+    "postbuild" : "npm run build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
